css/style.css
/* HEADER */
.top-header{
  height: 30px;
  background-color: black;
}

.top-header img{
  height: 100%;
  padding: 10px 7px;
}

.ab-btn-nav{
  margin: 0 15px 0 10px;
  background-color: black;
  border: 2px solid black;
  transition: all .5s;
}

.ab-btn-nav:hover{
  background-color: #5c636a;
  border: 2px solid white;
  outline: 2px solid #5c636a;
}

.ab-dropdown-menu-custom{
  width: 100vw !important;
  margin-top: -0.5px !important;
  border-radius: 0;
  margin-left: -1px !important;
  border: none !important;
}

.ab-ps5icon-nav{
  box-sizing: border-box;
  border: 2px solid white;
  border-radius: 10px;
  transition: border 0.5s ease-in-out;
  cursor: pointer;
}

.ab-ps5icon-nav:hover{
  border: 2px solid lightgray;
}

.ab-dropdown-item-custom{
  border-radius: 5px;
  transition: background-color 0.5s ease-in-out;
}

.ab-dropdown-item-custom:hover{
  background-color: #0d6dfc;
  color: white;
}
/* dropdown nav 100vw */
nav{ 
  margin-bottom: 0;
 }

.dropdown{ 
  position: static;
}

.dropdown-menu{
   width: 100%; text-align: center; 
}

.dropdown-menu>li{ 
  display: inline-block; 
}
/* //HEADER */

/* JAMBOTRON */
.ab-jambo-bg{
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

.ab-jambo-1{
  background-image: url("../img/jumbo-bg.png");
  margin-top: 106px;
}

.ab-content-jumbo{
  padding: 350px 0 50px 0;
  color: white;
  height: 100%;
}

.ab-content-jumbo img{
  width: 200px;
}

.ab-content-jumbo h2{
  font-size: 40px;
  padding: 10px 0;
}

.ab-btn-jumbo{
  color: white;
  background-color: #cd3d0f;
  border: 2px solid #cd3d0f;
}

.ab-btn-jumbo:hover{
  background-color: #cd3d0f;
  border: 2px solid black;
  outline: 2px solid #cd3d0f;
  transition: all .5s;
}
/* //JAMBOTRON */

/* CARD JAMBOTRON */
.ab-margin-jb{
  margin-bottom: 60px;
}

.ab-card-jb img{
  width: 100%;
  border-radius: 10px;
  transition: all 0.5s ease-in-out;
}

.ab-effect-card-jb:hover img{
  transform: translateY(-10%);
  box-shadow: 0 20px 25px 0px gray;
}

.ab-effect-card-jb{
  transition: all 1s ease-in-out;
}

#ab-active-card{
  outline: 2px solid blue;
  outline-offset: 2px;
}
/* //CARD JAMBOTRON */

/* PS5 SECTION */
.ab-active-accessories-ps5{
  transition: all 1s;
}

.ab-active-accessories-ps5:hover{
  opacity: 1.0 !important;
}

.ab-btn-blu-custom{
  border: 2px solid #0d6efd;
}

.ab-btn-blu-custom:hover{
  border: 2px solid white;
  outline: 2px solid #0d6efd;
  transition: all .5s;
}

h1,
h2
{
  font-weight: 600;
}
/* //PS5 SECTION */

/* SECOND-JAMBOTRON */
.ab-jambo-2{
  background-image: url("../img/it-takes-two-hero-banner-desktop.jpg");
}

.ab-jumbo2-padding{
  padding: 50px 0;
}

h2.ab-text-jumbo{
  font-size: 40px;
}
/* //SECOND-JAMBOTRON */

/* NUOVE USCITE */
.ab-bg-grey{
  background-color: #1f1f1f;
  color: white;
  padding: 20px 0;
}

.ab-card-jb .ab-br-newgame{
  border-radius: 25px;
}
/* //NUOVE USCITE */

/* PLAYSTATION PLUS */
.ab-ps-plus-bg{
  background-color: #bebcbb;
}

.ab-contain-psplus{
  display: flex;
  justify-content: center;
}

.ab-btn-plus{
  background-color: #d9dadc;
  color: #2860e6;
  border: 2px solid #d9dadc;
  border: none;
  font-weight: 600;
}

.ab-btn-plus:hover{
  color: #2860e6;
  background-color: #d9dadc;
  outline: 3px solid #c6c5c5;
}

.ab-plus-img{
  width: 350px;
}
/* //PLAYSTATION PLUS */

.ab-sale-effect:hover{
  transition: all 0.5s ease-in-out;
  opacity: 1 !important;
}
/* PLAYSTATION NOW */
.ab-psnow-bg{
  background-color: #161c3b;
}

.ab-btn-now{
  background-color: white;
  border: 2px solid white;
}

.ab-btn-now:hover{
  background-color: white;
  border: 2px solid black;
  outline: 2px solid white;
  transition: all .5s;
}
/* //PLAYSTATION NOW */

/* SOCIAL */
.ab-container-icon-social{
  margin: 0 auto;
  max-width: 800px;
  padding: 0 20px;
}

.ab-icon-social-effect:hover{
  cursor: pointer;
  transition: all 0.4s ease-in-out;
  transform: scale(1.1);
}
/* //SOCIAL */

/* FOOTER */
.ab-footer-bg{
  background-color: #00439c;
  padding: 50px 0;
  color: white;
}

.ab-logo-ps-footer{
  width: 80px;
}

.ab-list-footer ul li{
  list-style: none;
  padding-bottom: 10px;
}

.ab-list-footer ul li a{
  color: white;
  text-decoration: none;
}

.ab-list-footer ul li a:hover{
  text-decoration: underline;
}

.ab-logo-sie{
  width: 180px;
}
/* //FOOTER */

